--- a/bin/install
+++ b/bin/install
@@ -36,9 +36,8 @@ echo "$version" > "$OPENSHIFT_FUSE_DIR/env/OPENSHIFT_FUSE_VERSION"
 #Extract the distro
 cd $OPENSHIFT_FUSE_DIR
 
-# workaround for ENTESB-2239
-mkdir ../.m2/
-cp -r $OPENSHIFT_FUSE_DIR/usr/system ../.m2/repository
+mkdir -p ../.m2/repository
+chmod -R 755 ../.m2
 
 mkdir $OPENSHIFT_FUSE_DIR/container
 cd $OPENSHIFT_FUSE_DIR/usr
