Fixes ENTESB-2121: OSE A-MQ logical broker is named "bar" instead of $OPENSHIFT_APP_NAME

--- a/bin/install
+++ b/bin/install
@@ -190,7 +190,7 @@ else
 #Profile:mq-broker-default.${OPENSHIFT_APP_NAME}
 attribute.parents = mq-base
 EOF
-    cat > "$OPENSHIFT_FUSE_DIR/container/fabric/import/fabric/profiles/mq/broker/default.${OPENSHIFT_APP_NAME}.profile/io.fabric8.mq.fabric.server-bar.properties" <<EOF
+    cat > "$OPENSHIFT_FUSE_DIR/container/fabric/import/fabric/profiles/mq/broker/default.${OPENSHIFT_APP_NAME}.profile/io.fabric8.mq.fabric.server-${OPENSHIFT_APP_NAME}.properties" <<EOF
 standby.pool = default
 connectors = openwire
 broker-name = ${OPENSHIFT_APP_NAME}
