--- a/bin/install
+++ b/bin/install
@@ -101,7 +101,7 @@ cat container/etc/org.apache.karaf.features.cfg | sed 's/featuresBoot.*/features
 cp container/etc/org.apache.karaf.features.cfg.mod container/etc/org.apache.karaf.features.cfg || :
 rm container/etc/org.apache.karaf.features.cfg.mod || :
 
-if ping ${OPENSHIFT_FUSE_DOMAIN_DNS} > /dev/null; then
+if ping -c 1 ${OPENSHIFT_FUSE_DOMAIN_DNS} > /dev/null; then
   domain_url_check=0
 else
   domain_url_check=1
